--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ avatar: https://avatars0.githubusercontent.com/u/69707593?s=460&u=e8e8841fa35c0c
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: erick.choezr@ug.ed.ec
   facebook:
   flickr:
   github: 
@@ -40,7 +40,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: 
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
