--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: ERICK CHOEZ
+name: Erick Choez
 # Short bio or description (displayed in the header)
 description: Blog Personal
 
